<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/otp_context_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.OtpEntryFragment">

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:itemCount="4"
            app:itemSpacing="24dp"
            android:inputType="number"
            style="@style/PinWidget.PinView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpScreenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:text="@string/otp_screen_text"
            app:layout_constraintBottom_toTopOf="@+id/pinView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="106dp"
            android:layout_height="93dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/ic_unlock"
            app:layout_constraintBottom_toTopOf="@+id/otpScreenText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/content_description"/>

        <Button
            android:id="@+id/otpVerifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/button_continue_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingBottom="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinView" />

        <TextView
            android:id="@+id/otpTimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/otp_timer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpVerifyButton" />

        <TextView
            android:id="@+id/otpResendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_resend_text"
            android:textColor="@color/suffixTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTimerText" />

        <ProgressBar
            android:id="@+id/progressBarOTP"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:indeterminateTint="@color/primaryColor"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpResendText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
