<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ingrammicro.helpme.viewmodels.PhoneLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PhoneLoginFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_screen_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/phoneField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/phoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginEnd="28dp"
                app:startIconTint="@null"
                android:layout_marginRight="28dp"
                android:textSize="24sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12sp"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/confirmPhoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:paddingTop="10dp"
            android:paddingBottom="13dp"
            android:text="@string/button_confirm_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneField" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="106dp"
            android:layout_height="93dp"
            android:layout_marginBottom="41dp"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/ic_lock_icon"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPhoneButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>