<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_marginTop="48dp"

    android:layout_margin="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"

                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="15dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/verifiedIcon"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="84dp"
                        android:layout_marginLeft="84dp"
                        android:src="@drawable/ic_verified"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.934" />

                    <TextView
                        android:id="@+id/userFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/name_placeholder"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profileImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userEmailId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/email_placeholder"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profileImage"
                        app:layout_constraintTop_toBottomOf="@+id/userFullName" />

                    <Button
                        android:id="@+id/editProfileButton"
                        android:layout_width="118dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/purple"
                        android:text="@string/edit_profile_button"
                        android:textAllCaps="false"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profileImage"
                        app:layout_constraintTop_toBottomOf="@+id/userEmailId" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_grey"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_badgestar" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:divider="@color/greyColor"
                    android:dividerPadding="5dp"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/karma_points_text"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/karmaPoints"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="300"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/helped_text"
                            android:textColor="@color/primaryTextColor"

                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/helpedPoints"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="98"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_badgehandshake" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/profileProgressIndicator"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/profileContainer"
            app:layout_constraintEnd_toEndOf="@+id/profileContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
